# math_practice

./: .gitignore  CHANGES.md  LICENSE.md  README.md  dune-project  math_practice.opam
.github/workflows/: main.yml  release.yml
lib/: base.ml  base.mli  dune  math_expr.ml  math_expr.mli  rand.ml  rand.mli  rand_expr.ml  rand_expr.mli  rational.ml  rational.mli
src/: dune  main.ml  math_practice.ml
test/: base.ml  dune  math_expr.ml  order_of_operations.txt  rand.ml  rand_expr.ml  rational.ml  test_helper.ml
test/cmd/: dune
test/cmd/answer/decimal.t/: run.t
test/cmd/answer/fraction.t/: run.t
test/cmd/error/decimal.t/: run.t
test/cmd/error/fraction.t/: run.t
test/cmd/error/subcommand.t/: run.t
test/cmd/question/decimal.t/: run.t
test/cmd/question/fraction.t/: run.t
test/lib/: base.ml  dune  order_of_operations.txt  rand.ml  rational.ml  test_helper.ml
